--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app",
+  "name": "quiz",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -21,7 +21,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -62,7 +62,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7889,
+    "port": 7888,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
